--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
